[gd_scene load_steps=2 format=3 uid="uid://t2dui8ppm3a4"]

[ext_resource type="Script" path="res://addons/maaacks_menus_template/base/scenes/Credits/Credits.gd" id="4"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")
attribution_file_path = ""
h1_font_size = 64
h2_font_size = 48
h3_font_size = 32
h4_font_size = 24

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
scroll_vertical = 100
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="FooterSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="ScrollResetTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="gui_input" from="ScrollContainer" to="." method="_on_scroll_container_gui_input"]
[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="scroll_started" from="ScrollContainer" to="." method="_on_scroll_container_scroll_started"]
[connection signal="meta_clicked" from="ScrollContainer/VBoxContainer/CreditsLabel" to="." method="_on_CreditsLabel_meta_clicked"]
[connection signal="timeout" from="ScrollResetTimer" to="." method="_on_scroll_reset_timer_timeout"]
